// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render facebook sso button 1`] = `
<div
  className="sc-breQAM Flex___StyledAppBox-SiGEY juLXdh UserInvitationSSOPagestyle__Container-dqXVfv fkvEqx"
>
  <div
    className="sc-breQAM Flex___StyledAppBox-SiGEY ekOETO UserInvitationSSOPagestyle__LeftSide-hwYfPk kGvogW"
  >
    <div
      className="sc-breQAM Flex___StyledAppBox-SiGEY hInvt UserInvitationSSOPagestyle__LeftSideInner-jeevrm ldiJwX"
    >
      <div
        className="sc-breQAM UserInvitationSSOPagestyle__WelcomeMessage-hrwgdJ DaYtt dPMeBO"
      >
        <h2
          className="sc-breQAM bbScrj"
        >
          global-welcome
           
          <span
            aria-label="global-welcome"
            role="img"
          >
            👋
          </span>
        </h2>
        <p
          className="sc-breQAM ipZRBF"
        >
          invite-join-platform
        </p>
      </div>
      <div
        className="sc-breQAM Flex___StyledAppBox-SiGEY ksdEhV UserInvitationSSOPagestyle__ButtonsContainer-ejOutq bnfHaO"
      >
        <div
          className="SSOButtonstyle__LinkButton-imVlRX dgSBwV"
          type="facebook"
        >
          <span
            className="loginIcon"
            style={
              Object {
                "lineHeight": "inherit",
              }
            }
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
            />
          </span>
          <a
            href="/login/facebook?_destination=http://localhost"
            rel="noreferrer"
            target="_blank"
            title="facebook"
          >
            <span>
              Facebook
            </span>
          </a>
        </div>
        <div
          className="sc-breQAM Flex___StyledAppBox-SiGEY bALgQH"
        >
          <div
            className="sc-breQAM UserInvitationSSOPagestyle__Line-eEMwHm iQqRTR hPTlau"
          />
          <p
            className="sc-breQAM bIETvR"
          >
            global-or
          </p>
          <div
            className="sc-breQAM UserInvitationSSOPagestyle__Line-eEMwHm iQqRTR hPTlau"
          />
        </div>
        <a
          backgroundColor="green"
          className="SSOButtonstyle__BaseButton-dgxwMq SSOButtonstyle__PrimarySSOButton-fiGXjA jEyDju hMpXwe"
          href="/?token=onishan"
          onClick={[Function]}
          textColor="white"
        >
          create-account-with-email
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-breQAM Flex___StyledAppBox-SiGEY rgwFz UserInvitationSSOPagestyle__RigthSide-icDiDX bLaseu"
  >
    <div
      className="UserInvitationPagestyle__Symbols-eemyjG kKYEMo"
    />
    <img
      alt=""
      className="UserInvitationSSOPagestyle__Logo-irXgkD eRFVhU"
      src="/logo"
    />
  </div>
</div>
`;

exports[`<UserInvitationSSOPage /> <TestUserInvitationSSOPage /> should render franceConnect sso button 1`] = `
<div
  className="sc-breQAM Flex___StyledAppBox-SiGEY juLXdh UserInvitationSSOPagestyle__Container-dqXVfv fkvEqx"
>
  <div
    className="sc-breQAM Flex___StyledAppBox-SiGEY ekOETO UserInvitationSSOPagestyle__LeftSide-hwYfPk kGvogW"
  >
    <div
      className="sc-breQAM Flex___StyledAppBox-SiGEY hInvt UserInvitationSSOPagestyle__LeftSideInner-jeevrm ldiJwX"
    >
      <div
        className="sc-breQAM UserInvitationSSOPagestyle__WelcomeMessage-hrwgdJ DaYtt dPMeBO"
      >
        <h2
          className="sc-breQAM bbScrj"
        >
          global-welcome
           
          <span
            aria-label="global-welcome"
            role="img"
          >
            👋
          </span>
        </h2>
        <p
          className="sc-breQAM ipZRBF"
        >
          invite-join-platform
        </p>
      </div>
      <div
        className="sc-breQAM Flex___StyledAppBox-SiGEY ksdEhV UserInvitationSSOPagestyle__ButtonsContainer-ejOutq bnfHaO"
      >
        <div
          className="SSOButtonstyle__FranceConnectButton-iIoYOE cQSpVd"
        >
          <a
            className="sc-breQAM Link__LinkInner-jUMeyB fUcvMl jQFfTS"
            href="/login/franceconnect?_destination=http://localhost"
            target="_blank"
          >
            <span
              className="loginIcon"
              style={
                Object {
                  "lineHeight": "inherit",
                }
              }
            >
              <IconMock
                aria-hidden={true}
                className="icon"
                style={
                  Object {
                    "flexShrink": "0",
                    "verticalAlign": "middle",
                  }
                }
              />
            </span>
          </a>
        </div>
        <div
          className="sc-breQAM Flex___StyledAppBox-SiGEY bALgQH"
        >
          <div
            className="sc-breQAM UserInvitationSSOPagestyle__Line-eEMwHm iQqRTR hPTlau"
          />
          <p
            className="sc-breQAM bIETvR"
          >
            global-or
          </p>
          <div
            className="sc-breQAM UserInvitationSSOPagestyle__Line-eEMwHm iQqRTR hPTlau"
          />
        </div>
        <a
          backgroundColor="green"
          className="SSOButtonstyle__BaseButton-dgxwMq SSOButtonstyle__PrimarySSOButton-fiGXjA jEyDju hMpXwe"
          href="/?token=onishan"
          onClick={[Function]}
          textColor="white"
        >
          create-account-with-email
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-breQAM Flex___StyledAppBox-SiGEY rgwFz UserInvitationSSOPagestyle__RigthSide-icDiDX bLaseu"
  >
    <div
      className="UserInvitationPagestyle__Symbols-eemyjG kKYEMo"
    />
    <img
      alt=""
      className="UserInvitationSSOPagestyle__Logo-irXgkD eRFVhU"
      src="/logo"
    />
  </div>
</div>
`;
